2006-05-19 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt23
	* info/patches/realtime_patches/patch-2.6.16-rt23: added

2006-05-15 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc4-mm1
	* info/patches/mm_patches/2.6.17-rc4-mm1: added

2006-05-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.17-rc4
	* info/patches/PRE_2_6/patch-2.6.17-rc4: added

2006-05-10 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.16
	* info/patches/maintenance_patches/patch-2.6.16.16: added

2006-05-10 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.15
	* info/patches/maintenance_patches/patch-2.6.16.15: added

2006-05-09 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt20
	* info/patches/realtime_patches/patch-2.6.16-rt20: added

2006-05-08 David Brown <dmlb2000@gmail.com>
	* info/patches/reiser4_patches/reiser4-for-2.6.16-2.patch: added

2006-05-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks10
	* info/patches/ck_server_patches/patch-2.6.16-cks10: added

2006-05-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck10
	* info/patches/ck_patches/patch-2.6.16-ck10: added

2006-05-06 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.14
	* info/patches/maintenance_patches/patch-2.6.16.14: added

2006-05-03 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.13
	* info/patches/maintenance_patches/patch-2.6.16.13: added

2006-05-02 David Brown <dmlb2000@gmail.com>
        * info/patches/sws2_patches/suspend2-2.2.5-for-2.6.16.9.patch: added

2006-05-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks9
	* info/patches/ck_server_patches/patch-2.6.16-cks9: added

2006-05-02 David Brown <dmlb2000@gmail.com>