@@ -1,0 +1,5 @@
+appliedkernels="2.6.16"
+source="fbsplash-0.9.2-r5-2.6.16.patch"
+source_url="http://dev.gentoo.org/~spock/projects/gensplash/archive/$source"
+source_gpg="gurus.gpg:${source}.sig"
+gpg_source_url="http://download.sourcemage.org/distro/kernel/${source}.sig"
