@@ -1,4 +1,7 @@
 2006-05-19 David Brown <dmlb2000@gmail.com>
+        * info/patches/gensplash_patches/fbsplash-0.9.2-r5-2.6.16.patch: added
+
+2006-05-19 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16-rt23
 	* info/patches/realtime_patches/patch-2.6.16-rt23: added
 
